[package]
name = "ToyBrowser"
version = "0.1.0"
authors = ["stefinfection <sjeangeo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2"
gtk = "0.7.0"
gdk = "^0"
glib-sys = "^0"
glib = "^0"
gio = "^0"

#gtk = "*"
#gdk = "*"
#gdk-pixbuf = "*"
#cairo-rs = "*"
#pango = "*"
#pangocairo = "*"
#glib = "*"
#glib-sys = "*"
#gio = "*"